# galaxy

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/help/: en.txt
assets/shaders/: bodies.wgsl  colors.wgsl  gravity.wgsl  integrate.wgsl  merge.wgsl
planning/: overall_plan.md
planning/basic_simulation/: overview.md
planning/camera_enhancement/: architecture.md  overview.md  phase1_zoom_to_cursor.md
planning/gpu_compute/: overview.md  phase1_compute_shader.md
planning/object_editing/: overview.md
planning/performance_optimization/: measurements.md  overview.md  phase1_quick_wins.md  phase2_merge_optimization.md  phase3_render_optimization.md  phase4_profiling.md
planning/simulation_control/: architecture.md  overview.md  phase0_refactor.md  phase1_time_control.md  phase2_physics_params.md  phase3_restart_and_initial_conditions.md  phase4_force_polynomial.md
planning/url_state/: architecture.md  overview.md  phase1_encoding_and_payload.md  phase2_sync_plugin.md
planning/wasm_web/: overview.md  phase1_web_shell.md  phase2_gpu_simulation.md  phase3_deploy.md
scripts/: verify-browsers.mjs  verify-chrome.mjs
src/: lib.rs  main.rs
src/bootstrap/: mod.rs
src/encoding/: flat_query_codec.rs  mod.rs
src/model/: body.rs  constants.rs  force.rs  force_coefficient.rs  initial.rs  mod.rs  physics.rs  rng.rs
src/physics/: components.rs  force.rs  gpu_force.rs  integrator.rs  merger.rs  mod.rs
src/platform/: mod.rs  url_nav_native.rs  url_nav_wasm.rs
src/ports/: mod.rs  (+1 more)
(+59 files in other folders)
