[package]
name = "gravitium"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[features]
default = ["webgpu"]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39"
bevy_panorbit_camera = "0.34.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
